scripts/tests/errors/err_var_no_name.bu
// BAD: var with no name, just semicolon
var ;
var = 10;
print("should not reach here");
